log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:03:06 PM UTC 2026: 
 tests:  0|6
========================================
f9742b9
Fri May 15 06:05:59 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:23: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   32 |     if(grafo == NULL) return;
      |                       ^~~~~~
graph.c:29:8: note: declared here
   29 | Graph* createGraph()
      |        ^~~~~~~~~~~
0cf8cd9
Fri May 15 06:06:52 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aee3230
Fri May 15 06:07:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
03075de
Fri May 15 06:34:03 PM UTC 2026: 
 tests:  0|0
9744e96
Fri May 15 06:38:35 PM UTC 2026: 
 graph.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:63:16: error: too few arguments to function ‘list_next’
   63 |         edge = list_next();
      |                ^~~~~~~~~
In file included from graph.h:4,
                 from graph.c:6:
list.h:14:7: note: declared here
   14 | void *list_next(List *L);
      |       ^~~~~~~~~
29519c9
Fri May 15 06:38:47 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:63:26: error: passing argument 1 of ‘list_next’ from incompatible pointer type [-Wincompatible-pointer-types]
   63 |         edge = list_next(edge);
      |                          ^~~~
      |                          |
      |                          Edge *
In file included from graph.h:4,
                 from graph.c:6:
list.h:14:23: note: expected ‘List *’ but argument is of type ‘Edge *’
   14 | void *list_next(List *L);
      |                 ~~~~~~^
93b1b5b
Fri May 15 06:38:59 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4cbb89c
Fri May 15 06:40:04 PM UTC 2026: 
 tests:  0|0
cdca0d2
Fri May 15 06:42:55 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:50:15: error: ‘Graph’ has no member named ‘adjacencyMaps’; did you mean ‘adjacencyMap’?
   50 |     return g->adjacencyMaps;
      |               ^~~~~~~~~~~~~
      |               adjacencyMap
graph.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
09ffc83
Fri May 15 06:43:20 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:50:13: error: returning ‘Map *’ from a function with incompatible return type ‘List *’ [-Wincompatible-pointer-types]
   50 |     return g->adjacencyMap;
      |            ~^~~~~~~~~~~~~~
1a67c18
Fri May 15 06:44:00 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:50:27: error: invalid use of incomplete typedef ‘Map’
   50 |     return g->adjacencyMap->edge;
      |                           ^~
graph.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
d10d19a
Fri May 15 06:44:06 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:50:27: error: invalid use of incomplete typedef ‘Map’
   50 |     return g->adjacencyMap->edges;
      |                           ^~
graph.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
525000c
